@startuml DELClignotante_diagclasses

class "main_cpp" {
    + setup()
    + loop()
}

note left of main_cpp 
    Ce n'est pas une classe, c'est le fichier
    main.cpp et les fonctions setup / loop.
     - Déclarez un pointeur de Program
     - Dans la fonction setup : 
        - Allouer un Program et l'affecter au pointeur : le constructeur va initialiser ses données membres
     - Dans la fontion loop :
        - Appelez la méthode loop du pointeur
end note

class Program {
    - m_DELClignotante1 : DELClignotante *
    - m_DELClignotante2 : DELClignotante *
    + ctor()
    + loop()
}

class DEL {
    - m_pin : int
    - m_rapportCycle : float
    ...
    + DEL(p_pin : int, p_rapportCycle : float)
    + allumer()
    + eteindre()
    + rapportCycle(p_rapportCycle) << set >>
    + rapportCycle() : float << get >>
}

class DELClignotante {
    - m_dureeAllumee : int
    - m_dureeEteinte : int
    ...
    + DELClignotante(p_pin : int, p_rapportCycle : float, p_dureeAllumee : int, p_dureeEteinte : int)
    + tick()
}

main_cpp --> Program : create
Program --> DELClignotante : create

DEL <|-- DELClignotante

@enduml
